--- a/src/public/1-gallery.html
+++ b/src/public/1-gallery.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
+    <link rel="stylesheet" href="../css/1-gallery.css" />
   </head>
-  <body></body>
+  <body>
+    <script type="module" src="../js/1-gallery.js"></script>
+  </body>
 </html>
