--- a/src/2-form.html
+++ b/src/2-form.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/2-form.css" />
   </head>
   <body>
+    <p><a href="../index.html">Go back</a></p>
+
     <form class="feedback-form" autocomplete="off">
       <label>
         Email
